--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,6 @@ div {
     margin: 5px;
     padding:10px;
     height:100px;
-    background-color: bisque;
 }
 
 .container .head2 {
@@ -74,3 +73,65 @@ div {
     padding:10px;
     height: 100px;
 }
+
+@media only screen and (max-width: 600px),
+            screen and (max-height:680px) {
+
+    .container-main-aside .aside .side1{
+        display: none;
+        flex-grow: 0;
+    }
+
+    .container-main-aside {
+        flex-direction: row-reverse;
+    }
+
+    .container-main-aside .aside .side2 {
+        height: 70vh;
+    }
+
+    .container-main-aside .main {
+        flex-direction: column;
+        height: 74vh;
+    }
+
+    .container-main-aside .main .main2 {
+        display: none;
+    }
+
+    .header {
+        flex-direction: column;
+    }
+
+    .header > * {
+
+     height: 20px !important;
+
+    }
+
+    .header .head1 {
+        flex-grow: 10;
+    }
+
+    .footer {
+        height: 5vh !important;
+    }
+
+}
+
+@media only screen and (max-width: 600px) {
+
+
+}
+
+@media only screen and (min-width: 768px) {
+
+
+}
+
+@media only screen and (min-width: 992px) {
+
+
+}
+
+@media only screen and (min-width: 1200px) {}
